--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -21,9 +21,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.database=POSTGRESQL
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.open-in-view=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.resources.chain.html-application-cache=false
-#spring.datasource.hikari.maximum-pool-size=10
+#spring.datasource.hikari.maximum-pool-size=20
