--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,29 @@
-#server.port=${port:8081} 
+#CONEXÃO DE DADOS EM DESENVOLVIMENTO
+#stockdados.url=http://localhost:8080/stockdados
 
-spring.data.mongodb.uri=mongodb://localhost:27017/posts
+#CONEXÃO COM BANCO DE DADOS MYSQL 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:
+#spring.datasource.username=
+#spring.datasource.password=
+
+
+#=========PARA USAR O BANCO DE DADOS POSTGRESQL==============#
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postdb?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=postgres
+spring.datasource.password=252219
+spring.datasource.platform=postgres
+
+#JPA
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=POSTGRESQL
+
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.open-in-view=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.resources.chain.html-application-cache=false
+#spring.datasource.hikari.maximum-pool-size=10
