impl-> config Swagger

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,10 @@
 #stockdados.url=http://localhost:8080/stockdados
 
 #CONEXÃO COM BANCO DE DADOS MYSQL 
+
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:
-#spring.datasource.username=
+#spring.datasource.url=jdbc:mysql://localhost:3306/postdb?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
+#spring.datasource.username=root
 #spring.datasource.password=
 
 
@@ -12,7 +13,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postdb?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=postgres
-spring.datasource.password=252219
+spring.datasource.password=
 spring.datasource.platform=postgres
 
 #JPA
