--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,7 +12,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postdb?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=postgres
-spring.datasource.password=252219
+spring.datasource.password=
 spring.datasource.platform=postgres
 
 #JPA
@@ -21,9 +21,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.database=POSTGRESQL
 
 spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.open-in-view=true
-#spring.jpa.properties.hibernate.format_sql=true
-
 spring.resources.chain.html-application-cache=false
 #spring.datasource.hikari.maximum-pool-size=10
